manifests/productpage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage
spec:
  selector:
    matchLabels:
      app: productpage
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: productpage
        version: v1
    spec:
      containers:
        - name: productpage
          image: uhziel/productpage
          args:
            - "-details-host"
            - "details"
            - "-reviews-host"
            - "reviews"
          resources:
            requests:
              memory: "70Mi"
              cpu: "100m"
            limits:
              memory: "170Mi"
          ports:
            - containerPort: 2000
      nodeSelector:
        kubernetes.io/os: linux
