manifests/ratings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings
spec:
  selector:
    matchLabels:
      app: ratings
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: ratings
        version: v1
    spec:
      containers:
        - name: ratings
          image: uhziel/ratings
          resources:
            requests:
              memory: "70Mi"
              cpu: "100m"
            limits:
              memory: "170Mi"
          ports:
            - containerPort: 2003
      nodeSelector:
        kubernetes.io/os: linux
