manifests/reviews-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
spec:
  selector:
    matchLabels:
      app: reviews
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: reviews
        version: v1
    spec:
      containers:
        - name: reviews
          image: uhziel/reviews
          args:
            - "-ratings-host"
            - "ratings"
          resources:
            requests:
              memory: "70Mi"
              cpu: "100m"
            limits:
              memory: "170Mi"
          ports:
            - containerPort: 2001
      nodeSelector:
        kubernetes.io/os: linux
