manifests/details-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: details
spec:
  type: ClusterIP
  selector:
    app: details
  ports:
    - port: 2002
      targetPort: 2002
      appProtocol: tcp
