manifests/productpage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage
spec:
  type: ClusterIP
  selector:
    app: productpage
  ports:
    - port: 2000
      targetPort: 2000
      appProtocol: tcp
