manifests/ratings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings
spec:
  type: ClusterIP
  selector:
    app: ratings
  ports:
    - port: 2003
      targetPort: 2003
      appProtocol: tcp
