manifests/reviews-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
spec:
  type: ClusterIP
  selector:
    app: reviews
  ports:
    - port: 2001
      targetPort: 2001
